--- a/configs/uwsgi/daemon.ini
+++ b/configs/uwsgi/daemon.ini
@@ -3,10 +3,10 @@ module = wsgi:app
 master = true
 processes = 5
 
-uid = user
+uid = myappuser
 socket = /run/uwsgi/myapp.sock
-chown-socket = user:nginx
-chmod-socket = 660
+chown-socket = myappuser:nginx
+chmod-socket = 664
 vacuum = true
 
 die-on-term = true
